<resources>
    <string name="app_name">SPenPresentationControl</string>

    <string name="shutter">Shutter</string>
    <string name="camera_switch">Switch</string>
    <string name="next_filter">Next filter</string>
    <string name="prev_filter">Prev filter</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="spen_connecting">Connecting to SPen</string>
    <string name="spen_connected">SPen connected</string>
    <string name="spen_disconnected">SPen disconnected</string>
    <string name="computer_connecting">Connecting to computer</string>
    <string name="computer_connected">Computer connected</string>
    <string name="computer_disconnected">Computer disconnected</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_description_empty">description...</string>
    <string name="tutorial_description_send_command">Make a move with SPen or click on corresponding button to send commend to PC</string>
    <string name="tutorial_description_edit_command">To change "commend" to send by SPen, hold on corresponding button</string>
    <string name="connect_to_pc">Connect to computer</string>
    <string name="address">Address:</string>
    <string name="port">Port:</string>
    <string name="default_ip_address">192.168.1.1</string>
    <string name="default_port">1234</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="stop_connecting">Stop connecting</string>
    <string name="address_is_required">Address is required</string>
    <string name="port_is_required">Port is required</string>
    <string name="connection_failed">Connection Failed</string>
</resources>
